--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vueuse/core": "^11.3.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "next",
+    "ant-design-vue": "3.x",
     "axios": "^1.7.5",
     "default-passive-events": "^2.0.0",
     "echarts": "^5.4.0",
@@ -96,7 +97,6 @@
     "typescript": "~4.9.5",
     "vite": "^5.4.1",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-imagemin": "^0.6.1",
     "vue-tsc": "^1.2.0"
   }
 }
