--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 【开发】环境变量
 
 # 网站地址前缀
-VITE_BASE_URL = /manager/
+VITE_BASE_URL = /              # 开发环境也使用根路径
 
 # API 地址前缀
 # VITE_API_URL = 'http://192.168.137.1:8080'
