--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
 # 【生产】环境变量
 
 # 网站地址前缀
-VITE_BASE_URL = /manager/
+VITE_BASE_URL = /
 
 # API 地址前缀
-VITE_API_URL = ''
+VITE_API_URL = 'https://api.guyongfeng.cn'
 
 # Delete console
 VITE_DROP_CONSOLE = true
