--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,8 @@ VITE_BASE_URL = /              # 开发环境也使用根路径
 
 # API 地址前缀
 # VITE_API_URL = 'http://192.168.137.1:8080'
-VITE_API_URL = 'http://localhost:8080'
-# VITE_API_URL = 'http://api.guyongfeng.cn'
+# VITE_API_URL = 'http://localhost:8080'
+VITE_API_URL = 'http://api.guyongfeng.cn'
 
 # Delete console
 VITE_DROP_CONSOLE = false
