--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@
 VITE_BASE_URL = /
 
 # API 地址前缀
-VITE_API_URL = 'https://api.jiajiao123.xin'
+VITE_API_URL = 'https://api.jiajia0169.cn'
 
 # Delete console
 VITE_DROP_CONSOLE = true
